加入 Fork me on GitHub

--- a/web/index.html
+++ b/web/index.html
@@ -65,10 +65,14 @@
                         <br>
                         <strong>
                         圖片連結：
-                        <a href="" alt="Responsive link" id="link">點我</a>
+                        <a href="" alt="Responsive link" id="link"></a>
                         </strong>
                     </div>
                 </div>
+                <a href="https://github.com/YSITD"><img style="position: absolute; top: 0; right: 0; border: 0; width: 149px; height: 149px;" src="http://aral.github.com/fork-me-on-github-retina-ribbons/right-dusk-blue@2x.png" alt="Fork me on GitHub"></a>
+            </div>
+            <div class="footer">
+                <p>Powered By <a href="https://github.com/YSITD">YSITD</a></p>
             </div>
         </div>
     </body>
