No License No Live

--- a/web/index.html
+++ b/web/index.html
@@ -72,7 +72,8 @@
                 <a href="https://github.com/YSITD"><img style="position: absolute; top: 0; right: 0; border: 0; width: 149px; height: 149px;" src="http://aral.github.com/fork-me-on-github-retina-ribbons/right-dusk-blue@2x.png" alt="Fork me on GitHub"></a>
             </div>
             <div class="footer">
-                <p>Powered By <a href="https://github.com/YSITD">YSITD</a></p>
+                <p>Powered By <a href="https://github.com/YSITD">YSITD</a>。Licensed under the Apache License, Version 2.0 (the "License"), You may obtain
+# a copy of the License at <a href="http://www.apache.org/licenses/LICENSE-2.0">http://www.apache.org/licenses/LICENSE-2.0</a>.</p>
             </div>
         </div>
     </body>
