--- a/web/index.html
+++ b/web/index.html
@@ -27,19 +27,19 @@
                         <form class="form" role="form" action="javascript:sub();">
                             <label for="dlkbps">下載速度：</label>
                             <div class="input-group">
-                                <input type="text" class="form-control" id="dlkbps" placeholder="請輸入下載速度 (留空則為1Mbps)">
+                                <input type="text" class="form-control" id="dlkbps" placeholder="請輸入下載速度 (留空則為10Mbps (10000))">
                                 <span class="input-group-addon small">kbps</span>
                             </div>
                             <br>
                             <label for="ulkbps">上傳速度：</label>
                             <div class="input-group">
-                                <input type="text" class="form-control" id="ulkbps" placeholder="請輸入上傳速度 (留空則為1Mbps)">
+                                <input type="text" class="form-control" id="ulkbps" placeholder="請輸入上傳速度 (留空則為10Mbps (10000))">
                                 <span class="input-group-addon">kbps</span>
                             </div>
                             <br>
                             <label for="pingms">Ping：</label>
                             <div class="input-group">
-                                <input type="text" class="form-control" id="pingms" placeholder="請輸入Ping值 (留空則為20)">
+                                <input type="text" class="form-control" id="pingms" placeholder="請輸入Ping值 (留空則為6ms)">
                                 <span class="input-group-addon">ms</span>
                             </div>
                             <br>
