--- a/web/index.html
+++ b/web/index.html
@@ -7,7 +7,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <script type="text/javascript" src="./jquery-2.1.1.min.js"></script>
         <title>SpeedTest生成器</title>
-       <link rel="stylesheet" href="./bootstrap.min.css">
+        <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
         <!--[if lt IE 9]>
             <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js">
             </script>
@@ -72,7 +72,9 @@
                 <a href="https://github.com/YSITD"><img style="position: absolute; top: 0; right: 0; border: 0; width: 149px; height: 149px;" src="http://aral.github.com/fork-me-on-github-retina-ribbons/right-dusk-blue@2x.png" alt="Fork me on GitHub"></a>
             </div>
             <div class="footer">
-                <p>Powered By <a href="https://github.com/YSITD">YSITD</a>。<br><small>Licensed under the Apache License, Version 2.0 (the "License"), You may obtain a copy of the License at <a href="http://www.apache.org/licenses/LICENSE-2.0">http://www.apache.org/licenses/LICENSE-2.0</a>.</small></p>
+                <p>Powered By <a href="https://github.com/YSITD">YSITD</a>,
+                <br>
+                <small>Licensed under the Apache License, Version 2.0 (the "License"), You may obtain a copy of the License at <a href="http://www.apache.org/licenses/LICENSE-2.0">http://www.apache.org/licenses/LICENSE-2.0</a>.</small></p>
             </div>
         </div>
     </body>
