--- a/web/index.html
+++ b/web/index.html
@@ -5,7 +5,6 @@
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <script type="text/javascript" src="./jquery-2.1.1.min.js"></script>
         <title>SpeedTest生成器</title>
         <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
         <!--[if lt IE 9]>
@@ -16,7 +15,6 @@
         <![endif]-->
         <style type="text/css">
         </style>
-        <script type="text/javascript" src="./srg.js"></script>
     </head>
     <body>
         <div class="container">
@@ -77,5 +75,7 @@
                 <small>Licensed under the Apache License, Version 2.0 (the "License"), You may obtain a copy of the License at <a href="http://www.apache.org/licenses/LICENSE-2.0">http://www.apache.org/licenses/LICENSE-2.0</a>.</small></p>
             </div>
         </div>
+        <script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+        <script src="./srg.js"></script>
     </body>
 </html>
