Github link to repo instead of org.

--- a/web/index.html
+++ b/web/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="zh-tw">
-    
+
     <head>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -67,7 +67,7 @@
                         </strong>
                     </div>
                 </div>
-                <a href="https://github.com/YSITD"><img style="position: absolute; top: 0; right: 0; border: 0; width: 149px; height: 149px;" src="http://aral.github.com/fork-me-on-github-retina-ribbons/right-dusk-blue@2x.png" alt="Fork me on GitHub"></a>
+                <a href="https://github.com/YSITD/speedtest-result-generator"><img style="position: absolute; top: 0; right: 0; border: 0; width: 149px; height: 149px;" src="http://aral.github.com/fork-me-on-github-retina-ribbons/right-dusk-blue@2x.png" alt="Fork me on GitHub"></a>
             </div>
             <div class="footer">
                 <p>Powered By <a href="https://github.com/YSITD">YSITD</a>
