增加關鍵字、簡介、作者(給Google看的)

--- a/web/index.html
+++ b/web/index.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html lang="zh-tw">
-
     <head>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
+        <meta name="Keywords" Content="speedtest,result,generator,php">
+        <meta name="Description" Content="如果你想要宣傳你的「萬人伺服器」，卻被酸說頻寬太小，但是卻因為爸爸媽媽不願意花錢給你升級頻寬，或是種花電信看你家沒錢，不在你家附近升級光世代，讓你各種錯愕各種難堪嗎？現在讓你立刻圓夢，讓你拿夢想中的頻寬塞爆酸民的嘴！">
+        <meta name="Author" Content="YSITD,https://github.com/YSITD">
         <title>SpeedTest生成器</title>
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
         <!--[if lt IE 9]>
